--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p>--------</p>
 		</div>
 			<div id="temp">
-				<img id="temp-icon" src="/images/clouds.png" alt="">
+				<img id="temp-icon" src="https://raw.githubusercontent.com/likhithabandaru2003/weather-app/main/images/clouds.png" alt="">
 				<p><span id="temp-value">-------</span><span id="temp-unit">&#176;c</span></p>
 			</div>
 			<div id="climate">
